additional header updates, including fixed on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5679,6 +5679,10 @@ p {
   margin: 1em 0;
 }
 
+/* line 19, ../scss/base/_main.scss */
+.scroll {
+  padding-top: 90px;
+}
 @media (min-width: 768px) {
   /* line 19, ../scss/base/_main.scss */
   .scroll {
@@ -6217,13 +6221,11 @@ em, i {
   max-width: 1190px;
 }
 
-@media (min-width: 768px) {
-  /* line 1, ../scss/layout/component-layout/_header-layout.scss */
-  .header {
-    position: fixed;
-    top: 1;
-    width: 100%;
-  }
+/* line 1, ../scss/layout/component-layout/_header-layout.scss */
+.header {
+  position: fixed;
+  top: 1;
+  width: 100%;
 }
 /* line 13, ../scss/layout/component-layout/_header-layout.scss */
 .header .nav-global__utility {
@@ -6256,34 +6258,40 @@ em, i {
 @media (min-width: 768px) {
   /* line 34, ../scss/layout/component-layout/_header-layout.scss */
   .header .header-navs {
+    padding-top: 42px;
+  }
+}
+@media (min-width: 1024px) {
+  /* line 34, ../scss/layout/component-layout/_header-layout.scss */
+  .header .header-navs {
     padding-top: 55px;
   }
 }
-/* line 44, ../scss/layout/component-layout/_header-layout.scss */
+/* line 47, ../scss/layout/component-layout/_header-layout.scss */
 .header .logo {
   padding-top: 7px;
   width: 60px;
 }
 @media (min-width: 768px) {
-  /* line 44, ../scss/layout/component-layout/_header-layout.scss */
+  /* line 47, ../scss/layout/component-layout/_header-layout.scss */
   .header .logo {
     padding-top: 32px;
     width: 90px;
   }
 }
 @media (min-width: 1024px) {
-  /* line 44, ../scss/layout/component-layout/_header-layout.scss */
+  /* line 47, ../scss/layout/component-layout/_header-layout.scss */
   .header .logo {
     padding-top: 32px;
     width: 120px;
   }
 }
-/* line 63, ../scss/layout/component-layout/_header-layout.scss */
+/* line 66, ../scss/layout/component-layout/_header-layout.scss */
 .header .nav-social {
   display: none;
 }
 @media (min-width: 480px) {
-  /* line 63, ../scss/layout/component-layout/_header-layout.scss */
+  /* line 66, ../scss/layout/component-layout/_header-layout.scss */
   .header .nav-social {
     display: block;
     position: absolute;
@@ -6292,7 +6300,7 @@ em, i {
   }
 }
 @media (min-width: 768px) {
-  /* line 63, ../scss/layout/component-layout/_header-layout.scss */
+  /* line 66, ../scss/layout/component-layout/_header-layout.scss */
   .header .nav-social {
     display: block;
     position: relative;
@@ -6302,7 +6310,7 @@ em, i {
   }
 }
 @media (min-width: 768px) {
-  /* line 82, ../scss/layout/component-layout/_header-layout.scss */
+  /* line 85, ../scss/layout/component-layout/_header-layout.scss */
   .header .mobile-menu-button {
     display: none;
   }
@@ -6859,30 +6867,30 @@ em, i {
   background-color: white;
   z-index: 999;
 }
+/* line 15, ../scss/components/_header.scss */
+.header.page-scrolling {
+  box-shadow: 1px 1px 8px rgba(102, 102, 102, 0.3);
+}
+/* line 18, ../scss/components/_header.scss */
+.header.page-scrolling .header-logo-bar {
+  height: auto;
+}
 @media (min-width: 768px) {
-  /* line 15, ../scss/components/_header.scss */
-  .header.page-scrolling {
-    box-shadow: 1px 1px 8px rgba(102, 102, 102, 0.3);
-  }
-  /* line 17, ../scss/components/_header.scss */
-  .header.page-scrolling .header-logo-bar {
-    height: auto;
-  }
-  /* line 20, ../scss/components/_header.scss */
+  /* line 28, ../scss/components/_header.scss */
   .header.page-scrolling .logo {
     padding-top: 10px;
   }
-  /* line 23, ../scss/components/_header.scss */
+  /* line 31, ../scss/components/_header.scss */
   .header.page-scrolling .logo img {
     max-width: 80px;
   }
-  /* line 27, ../scss/components/_header.scss */
+  /* line 35, ../scss/components/_header.scss */
   .header.page-scrolling .header-navs {
     padding-top: 5px;
   }
 }
 
-/* line 36, ../scss/components/_header.scss */
+/* line 44, ../scss/components/_header.scss */
 .header, .header .logo,
 .header .logo img,
 .header .header-navs,
